--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
     "@types/yup": "^0.29.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "ts-node-dev": "^1.0.0-pre.64",
     "typescript": "^4.0.3"
   }
