--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "import/extensions": "off",
         "import/no-unresolved": "off",
         "no-undef": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
     }
 }
